Update build.sh
removed XX:MaxPermSize=512m as it is no longer supported since v8.0